# Accounts-Payable-Workflow-AI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py  start_backend.py
backend/: Dockerfile  init_db.py  pyproject.toml  render.yaml  requirements.txt  seed_demo_data.py
backend/ap_workflow/: __init__.py  alembic.ini  main.py
backend/ap_workflow/alembic/: env.py
backend/ap_workflow/alembic/versions/: 001_initial_schema.py
backend/ap_workflow/core/: __init__.py  config.py  deps.py  logging_config.py  security.py
backend/ap_workflow/database/: __init__.py  session.py
backend/ap_workflow/models/: __init__.py  anomaly_detection.py  approval.py  audit_log.py  duplicate_detection.py  exception.py  invoice.py  llm_explanation.py  matching.py  ocr_extraction.py  payment.py  vendor_baseline.py  vendor_baseline_history.py
backend/ap_workflow/redis/: __init__.py  client.py
backend/ap_workflow/routes/: __init__.py  approvals.py  auth.py  exceptions.py  health.py  invoices.py  payments.py  settings.py  vendors.py  websocket.py
backend/ap_workflow/schemas/: __init__.py  approval.py  audit_log.py  exception.py  invoice.py  ocr_extraction.py  payment.py  vendor_baseline.py
backend/ap_workflow/services/: __init__.py  anomaly_detection.py  approval_management.py  audit_logger.py  circuit_breaker.py  decision_engine.py  duplicate_detection.py  health_monitoring.py  ingestion.py  llm_explainer.py  matching.py  message_queue.py  ocr.py  payment_scheduler.py  queue_consumers.py  queue_publishers.py  vendor_baseline.py  websocket_events.py
frontend/: .env.example  AUTHENTICATION_COMPONENTS.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css
frontend/src/__tests__/: auth.test.ts
tests/: conftest.py  test_baseline_validation.py  test_baseline_validation_api.py  test_currency_normalization.py  test_fx_rate_fetching.py  test_low_confidence_flagging.py  test_ocr.py
tests/properties/: __init__.py  test_audit_logging_properties.py  test_auto_approval_properties.py  test_baseline_validation_properties.py  test_data_model_validation_properties.py  test_duplicate_detection_properties.py  test_ensemble_anomaly_properties.py  test_exception_priority_properties.py  test_exception_routing_properties.py  test_fallback_explanation_properties.py  test_ingestion_properties.py  test_isolation_forest_properties.py  test_llm_caching_properties.py  test_multi_currency_baseline_properties.py  test_three_way_matching_properties.py  test_websocket_authentication_properties.py  test_websocket_event_broadcasting_properties.py  test_zscore_anomaly_properties.py
tests/unit/: test_websocket_server.py
(+20 files in other folders)
