[tool.poetry]
name = "ap-workflow-agent"
version = "0.1.0"
description = "Accounts Payable Workflow Agent - Intelligent invoice processing system"
authors = ["AP Team <ap@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
redis = "^5.0.1"
tesseract = "^0.1.3"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
requests = "^2.31.0"
rapidfuzz = "^3.6.1"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
websockets = "^12.0"
cryptography = "^41.0.7"
boto3 = "^1.34.34"
supabase = "^2.3.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
hypothesis = "^6.98.12"
fastapi-testclient = "^0.2.0"
black = "^23.12.1"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = ["poetry.core.masonry.api"]
