[project]
name = "ap-workflow"
version = "0.1.0"
description = "AP Workflow Agent - Intelligent invoice processing system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "python-multipart>=0.0.19,<0.0.20",
    "pydantic>=2.10.0,<2.11.0",
    "pydantic-settings>=2.7.0,<2.8.0",
    "email-validator>=2.2.0,<2.3.0",
    "supabase>=2.10.0,<2.11.0",
    "psycopg2-binary>=2.9.10,<2.10.0",
    "sqlalchemy>=2.0.36,<2.1.0",
    "alembic>=1.14.0,<1.15.0",
    "httpx>=0.28.0,<0.29.0",
    "aiohttp>=3.11.0,<3.12.0",
    "redis>=5.2.0,<5.3.0",
    "upstash-redis>=1.1.0,<1.2.0",
    "pytesseract>=0.3.13,<0.4.0",
    "pdf2image>=1.17.0,<1.18.0",
    "Pillow>=11.0.0,<12.0.0",
    "PyPDF2>=3.0.0,<3.1.0",
    "pdfplumber>=0.11.4,<0.12.0",
    "rapidfuzz>=3.11.0,<3.12.0",
    "scikit-learn>=1.6.0,<1.7.0",
    "joblib>=1.4.2,<1.5.0",
    "numpy>=2.1.0,<3.0.0",
    "pandas>=2.2.0,<2.3.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "python-dotenv>=1.0.1,<1.1.0",
    "websockets>=14.0,<15.0",
    "imaplib2>=3.6,<3.7.0",
    "mail-parser>=3.15.0,<3.16.0",
    "pytest>=8.3.0,<8.4.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<6.1.0",
    "hypothesis>=6.115.0,<6.116.0",
    "python-dateutil>=2.9.0,<2.10.0",
    "pytz>=2024.2,<2025.0",
    "tenacity>=9.0.0,<9.1.0",
    "structlog>=24.4.0,<24.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"